# generic-web-crawler-api

./: README.md  pyproject.toml  render.yaml  requirement.md
app/: __init__.py  main.py  schemas.py
app/api/: routes.py
app/crawler/: Untitled  __init__.py  browser_profile.py  detector.py  exceptions.py  extractor.py  fetcher.py  orchestrator.py  renderer.py  validator.py
openspec/changes/archive/2026-05-19-generic-web-crawler-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-19-generic-web-crawler-api/specs/web-crawling-api/: spec.md
openspec/specs/web-crawling-api/: spec.md
tests/: test_detector.py  test_extractor.py  test_orchestrator.py  test_renderer.py  test_validator.py
